k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vitalsync-frontend
  labels:
    app: vitalsync
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: vitalsync
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
